# hospitality-alt-data-dashboard

./: .env.example  .gitignore  README.md  app.py  config.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml  daily.yml  weekly_notify.yml
src/: analysis.py  notify.py  pipeline.py
src/data/: bls.py  cache.py  net.py  prices.py  trends.py  tsa.py
tests/: test_analysis.py  test_notify.py
